# pixelgram

./: README.md
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/pixelgram/: __main__.py  auth.py  db.py  dependencies.py  settings.py  test_main.py
backend/pixelgram/models/: __init__.py  access_token.py  oauth_account.py  post.py  post_comment.py  post_like.py  post_saved.py  user.py
backend/pixelgram/routers/: auth.py  captions.py  posts.py  users.py
backend/pixelgram/routers/posts/: comments.py  likes.py  posts.py  saved.py
backend/pixelgram/schemas/: camel_model.py  caption.py  post.py  post_comment.py  user.py
backend/pixelgram/services/: captions_service.py  hf_client.py  hugging_face_client.py  post_service.py  rate_limiter.py  supabase_client.py  user_service.py
backend/pixelgram/services/posts/: comment_service.py  comments.py  like_service.py  saved_service.py
backend/pixelgram/utils/: constants.py
backend/tests/: conftest.py  overrides.py  test_caption.py  test_captions.py  test_main.py  test_posts.py  test_rate_limiter.py  test_users.py  utils.py
backend/tests/posts/: test_posts.py  test_posts_comments.py  test_posts_likes.py  test_posts_saved.py
frontend/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/.devcontainer/: Dockerfile  devcontainer.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthMenu.tsx  AuthenticatedRoute.tsx  BaseModal.tsx  BrandLogo.tsx  DesktopMenu.tsx  FullPageErrorAlert.tsx  FullPageSpinner.tsx  Hero.tsx  InfiniteScrollIntersectionObserver.tsx  InputField.tsx  LogInForm.tsx  LogoText.tsx  MenuLinks.tsx  MobileMenu.tsx  Modal.tsx  NavButtons.tsx  NavLinks.tsx  Navbar.tsx  PostCard.tsx  PostsGrid.tsx  PublishPixelartModal.tsx  SignUpForm.tsx  UnauthenticatedRoute.tsx
frontend/src/components/account/: ConfirmDeleteAccountModal.tsx
frontend/src/components/canvas/: Canvas.tsx
frontend/src/components/forms/: AccountForm.tsx  InputField.tsx  LogInForm.tsx  PublishPixelartModal.tsx  SendCommentForm.tsx  SignUpForm.tsx
frontend/src/components/modals/: BaseModal.tsx  Modal.tsx  ModalBackdrop.tsx  ModalButton.tsx  ModalContent.tsx  ModalContext.tsx  ModalFooter.tsx  ModalHeader.tsx
frontend/src/components/navbar/: AccountLinks.tsx  AuthMenu.tsx  DesktopMenu.tsx  MenuLinks.tsx  MobileMenu.tsx  Navbar.tsx
frontend/src/components/post-card/: PostCard.tsx  PostCardActions.tsx  PostCardComment.tsx  PostCardDescription.tsx  (+3 more)
frontend/src/hooks/: useAccountForm.ts  useModalContext.ts
frontend/src/layouts/: Layout.tsx
frontend/src/pages/: AccountPostsPage.tsx  CanvasPage.tsx  FeedPage.tsx  LandingPage.tsx  LogInPage.tsx  MyPostsPage.tsx  NotFoundPage.tsx  SignUpPage.tsx
frontend/src/services/: account-service.ts  auth-service.ts  fetch-api.ts  posts-service.ts
frontend/src/stores/: auth-store.ts
frontend/src/types/: account.ts  link.ts  modal.ts  post-comment.ts  post.ts  tool.ts
frontend/src/utils/: AuthenticatedRoute.tsx  OAuthCallback.tsx  UnauthenticatedRoute.tsx  constants.ts  navigation.ts
(+23 files in other folders)
