[project]
name = "pixelgram-backend"
version = "0.1.0"
description = "Pixelgram is a minimal social media for pixel art content."
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi-users[oauth,sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.8",
    "pillow>=11.2.1",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.9.6"
]
