[project]
name = "pixelgram-backend"
version = "0.1.0"
description = "Pixelgram is a minimal social media for pixel art content."
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "click==8.1.8",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==44.0.2",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi-cli==0.0.7",
    "fastapi-users-db-sqlalchemy==7.0.0",
    "fastapi-users[oauth,sqlalchemy]==14.0.1",
    "fastapi[standard]==0.115.12",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-oauth==0.16.1",
    "huggingface-hub>=0.30.2",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "makefun==1.15.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "packaging==24.2",
    "pillow>=11.2.1",
    "pluggy==1.5.0",
    "pwdlib==0.2.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "rich-toolkit==0.14.0",
    "ruff==0.11.2",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "starlette==0.46.1",
    "typer==0.15.2",
    "typing-extensions==4.13.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0 ; platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.9.6",
]
