[project]
name = "pixelgram-backend"
version = "0.1.0"
description = "Pixelgram is a minimal social media for pixel art content."
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.2",
    "email-validator>=2.2.0",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "fastapi-users[oauth,sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.12",
    "h11==0.16",
    "huggingface-hub>=0.30.2",
    "pillow>=11.2.1",
    "pydantic-settings>=2.9.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.10",
]
